podaffinit.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-affinity-pod
  labels:
    service: s2
spec:
  containers:
    - name: node-affinit-pod
      image: docker.io/ocpqe/hello-pod
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: security
            operator: In
            values:
            - S1
        topologyKey: topology.kubernetes.io/zone
