networkpolicy.yml
root@ip-172-31-34-54:~/spring-login# cat allowhttp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-http-https
spec:
  podSelector: {}
    matchLabels:
      app: mynginx
  ingress:
  - port:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
